Bug fix: Clippings tree list has unwanted borders on tree items when color overrides in Firefox is enabled
(issue #318)

--- a/wx-src/pages/keyboardPaste.css
+++ b/wx-src/pages/keyboardPaste.css
@@ -329,13 +329,15 @@ button.browser-style:focus:not(:disabled) {
 .clipping {
     width: 100%;
     height: 36px;    
-    border: 1px solid transparent;
+    border: none;
     background-color: var(--color-autocomplete-normal-bkgd);
+    padding: 1px;
 }
 
 .clipping[selected="true"] {
     background-color: var(--color-autocomplete-selected-bkgd);
-    border-color: var(--color-autocomplete-selected-border);
+    border: 1px solid var(--color-autocomplete-selected-border);
+    padding: 0px;
 }
 
 .clipping > .name {
